# natal-report

./: README.md  pyproject.toml
.cursor/rules/: python-style.mdc  uv.mdc
.github/workflows/: ci.yml
natal_report/: report.py
src/natal_report/: report.css  report.py
tests/: test_report.py
