[tool.poetry]
name = "natal-report"
version = "0.1.2"
description = ""
authors = ["Kelvin Ng <hoishing@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
natal = { git = "https://github.com/hoishing/natal.git", branch = "v0.9" }
weasyprint = "^63.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
